--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,7 @@ table.dataTable span.column_highlight {
 .game-checks {
   margin-top: 10px;
   column-gap: 7px;
+  row-gap: 7px;
 }
 
 #main-input {
@@ -286,7 +287,7 @@ body.flex-center .main-table-wrap {
 }
 
 body.flex-center .search-wrap {
-  width: 600px;
+  max-width: 900px;
 }
 
 body {
