--- a/css/style.css
+++ b/css/style.css
@@ -127,3 +127,14 @@ body {
   color:#b7b7b7;
   font-size: 14px;
 }
+
+.book-image {
+  max-width: 100%;
+  background: url('../img/mappaper01.jpg');
+}
+
+.book-image-center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
